Fixed body width 100vw overflowing and added global p style In some browsers that use traditional scrollbars, body width 100vw causes horizontal overflow due to the scrollbars.

--- a/globals/globals.css
+++ b/globals/globals.css
@@ -5,7 +5,7 @@
 body{
   margin: 0;
   padding: 0;
-  width: 100vw;
+  width: 100%;
   min-height: 100dvh;
   display: flex;
   justify-content: center;
@@ -47,4 +47,9 @@ section{
   .mobile{
     display: none;
   }
+}
+
+p{
+  position: relative;
+  width: 100%;
 }
